index.css
/* Set the base font size on the html element */
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
html {
    font-size: 10px;
}


/* Basic styling for the layout */
body {
    background-color: #282828;
    font-family: Arial, sans-serif;
    box-sizing: border-box;
    font-size: 1.5rem;
    min-height: 100%;
    display: flex;
    flex-direction: column;
    color: white;
}

header {
    position: relative;
    color: white;
    text-align: center;
    background-color: transparent; /* Dark background for the header */
    overflow: hidden; /* Ensures the animation stays within the bounds of the header */
}

.title{
    font-size: 6rem;
    margin-bottom: 7rem;
    margin-top: 5rem;
}

h1{
    font-size: 6rem;
    margin-bottom: 3rem;
    margin-top: 2rem;
}

h2{
    color: #000;
    font-size: 4.5rem;
    margin-bottom: 4rem;
}

h3{
    text-decoration: underline;
    font-size: 3rem;
    margin-bottom: 2rem;
    color: azure;
    padding-left: 2rem;
}
nav ul {
    list-style-type: none;
    margin: 1rem 3rem;
    display: flex; /* Display the list items inline */
    justify-content: center; /* Center align the nav items */
}

nav ul li {
    margin: 0 0.25rem; /* Spacing between the list items */
    
}

nav ul li a {
    background-color: rgb(61, 61, 61); /* Stone color */
    color: white;
    margin: 2rem 0rem 0.75rem 0rem;
    padding: 1rem 2rem;
    text-decoration: none;
    font-weight: bold;
    border-radius: 10px; /* Rounded corners for stone-like appearance */
    display: block;
    transition: all 0.3s ease; /* Smooth transition for hover effects */
    font-size: 2rem;
    border: black solid 0.1rem;
}

/* Let's add a hover effect to simulate a raised stone */
nav ul li a:hover {
    background-color: darkgrey; /* Stone color on hover */
    transform: translateY(-5px); /* Raise the stone */
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Shadow effect */
}

main {
    flex: 1;
    background-color: #282828;
    padding: 4% 8%;
    
}

.images {
    height: auto; 
    width: 30%;
    float: left; /* Float the image to the left */
    margin-right: 1rem;
    padding-left: 2rem;
}

#quote {
    transition: opacity 0.5s ease; /* Adjust the transition duration and timing function as needed */
}

#quotes {
    text-align: center; /* Centers the text inside the blockquote */
    font-size: 2.5rem;
    text-shadow: 
        -1px -1px 0 #000,  
         1px -1px 0 #000,
        -1px  1px 0 #000,
         1px  1px 0 #000;
}

#quotes h2 {
    font-size: 3rem;
}

blockquote {
    margin: 1rem auto; /* Centers the blockquote horizontally in the #quotes section */
    width: 50%; /* Optional: you might want to limit the width of blockquotes */
}
#About{
    padding-top: 0.9rem;
    padding-bottom: 7rem;
}

.aboutMe{
    font-size: 2rem;
}

#Books{
    height: 100rem;
    padding: 3rem 0rem;
}
footer {
    background-color: #222;
    color: white;
    text-align: center;/* 10px 20px */
    font-size: 2rem;
    padding-top: 4rem;
    padding-bottom: 4rem;
}

footer a {
    color: white;
    text-decoration: none;
    padding-right: 2rem; /* 10px */
    padding-top: 4rem;
    padding-bottom: 4rem;
}

.stone1, .stone2, .stone3 {
    background-color: rgb(84, 84, 84);
    
}

.stone1 {
    border-radius: 1.8rem 1.2rem 2.1rem 1.5rem; 
    padding: 1.2rem 2.4rem; 
}

.stone2 {
    border-radius: 1.5rem 2.1rem 1.2rem 1.8rem; 
    padding: 1.05rem 2.1rem; 
}

.stone3 {
    border-radius: 2.1rem 1.5rem 1.8rem 1.2rem; 
    padding: 1.35rem 2.7rem; 
}

#starfield {
    width: 100%; 
    height: 100vh; 
    position: relative;
    overflow: hidden;
    background-color: #000;
    background-image: url(./Images/HeroImage.jpg);
    background-size: cover;  /* Cover the area completely */
    background-position: center;  /* Center the background image */
    background-repeat: no-repeat; 
}

#starfield canvas {
    position: absolute;
    width: 100%;
    height: 40%;
}


/* Default styles for text */
.long-text,
.short-text {
    display: none; /* Hide both texts by default */
}

/* Media query for larger screens */
@media screen and (min-width: 768px) {
    .long-text {
        display: block; /* Display long text on larger screens */
        font-size: 2rem;
        margin-bottom: 7rem;
        padding-left: 2rem;
    }
}

/* Media query for smaller screens */
@media screen and (max-width: 767px) {
    .short-text {
        display: block; /* Display short text on smaller screens */
        margin-bottom: 3rem;
    
    }
}

/* Smaller devices (phones, tablets, smaller desktops) */
@media (max-width: 768px) {
    .buy {
        font-size: 2rem; /* Smaller font size for smaller screens */
        padding: 1rem; /* Fixed padding */
        text-align: center;
        align-items: center;
        justify-content: center;
    }
    .images {
        width: 100%; /* Full width on smaller screens */
        padding-left: 0;
        padding-bottom: 2rem;
    }
    h3{
        padding-left: 0;
    }
}



h2 span{
    background-color: rgb(240, 255, 255);
    padding: 1rem;
    border-radius: 1rem;
    text-decoration: none;
    padding: 1rem;
    color: #000;
}

a{
    text-decoration: none;
    color: black;
}
.buy{
    display: inline-block;
    background-color: rgb(240, 255, 255);
    color: #000;
    padding: 1rem;
    border-radius: 0.5rem;
    font-size: 3rem;
    margin-left: 2rem;
    border: solid black 0.2rem;
    font-weight: bold;
}

.buy-container{
    text-align: center;
    justify-content: center;
    margin-right: 2rem;
    padding-bottom: 3rem;
    margin-bottom: 2rem;
}


  .social-link{
    font-size: 4rem;
    align-items: center;
    text-align: center;
  }

  
  @media (prefers-color-scheme: dark) {
    h2 span {
        background-color: rgb(255, 255, 255) ;
        color: rgb(0, 0, 0);
    }
}

